--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "node0",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "name": "magic_ping",
+  "version": "0.2.0",
+  "description": "chat, web and push notification backend",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon -e js,html,css app.js"
   },
-  "author": "",
+  "author": "aswin.1231@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "@socket.io/admin-ui": "^0.3.0",
+    "body-parser": "^1.20.0",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.13",
-    "nodemon": "^2.0.15",
-    "socket.io": "^4.4.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.3.6",
+    "nunjucks": "^3.2.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.5.1",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
